--- a/Views/ActivationsEditorWindow.xaml
+++ b/Views/ActivationsEditorWindow.xaml
@@ -152,6 +152,7 @@
 		<!--footer-->
 		<Border Grid.Row="1" BorderThickness="0,1,0,0" BorderBrush="Silver" HorizontalAlignment="Stretch" Background="#FF46464A">
 			<WrapPanel HorizontalAlignment="Right" >
+				<TextBlock Foreground="White" TextWrapping="Wrap" MaxWidth="550" VerticalAlignment="Center" Margin="0 0 50 0">Known Issue: Attack Text and After Effect will not update until you click the green checkmark to save, and then re-open this window.</TextBlock>
 
 				<Button x:Name="okButton" Margin="10" Background="MediumSeaGreen" Click="OkButton_Click" IsDefault="True">
 					<Image Source="/JiME;component/Assets/ok.png" Stretch="Uniform" Width="32" Margin="5"/>
