--- a/Views/Interactions/ThreatInteractionWindow.xaml
+++ b/Views/Interactions/ThreatInteractionWindow.xaml
@@ -373,7 +373,7 @@
 											<Rectangle Grid.Row="5" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="6" Fill="Purple" />
 											<StackPanel Orientation="Horizontal" Grid.Row="5" Grid.Column="0">
 												<TextBlock Text="d" Foreground="White" FontSize="20" Margin="2,0" Width="20" FontFamily="/Assets/#LoTR JiME Icons"/>
-												<CheckBox Click="collection_Click" x:Name="denizensOfDarknessCB" Content="Denizens of Darkness:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
+												<CheckBox Click="collection_Click" x:Name="denizensInDarknessCB" Content="Denizens in Darkness:" FontWeight="Bold" Foreground="White" Padding="0,0,5,0"/>
 											</StackPanel>
 											<CheckBox Grid.Row="5" Grid.Column="1" x:Name="oliverCB" Content="Oliver (X)" Foreground="White" Padding="0,0,5,0"/>
 											<CheckBox Grid.Row="5" Grid.Column="2" x:Name="ursulaCB" Content="Ursula (X)" Foreground="White" Padding="0,0,5,0"/>
