--- a/Views/Interactions/ConditionalInteractionWindow.xaml
+++ b/Views/Interactions/ConditionalInteractionWindow.xaml
@@ -111,12 +111,17 @@
 			<TabItem Header="Conditional Event" Padding="5">
 				<StackPanel Margin="0,5,0,0">
 					<Border Style="{StaticResource callout}">
-						<TextBlock Style="{StaticResource SubText}" Text="Conditional Events silently listen for any number of Triggers to be fired. After all the Triggers being monitored have been fired, it fires a Trigger of its own. Conditional Events cannot be assigned to a Token on a tile, nor can they be Triggered to activate - they are automatically always active and listening." VerticalAlignment="Center" TextWrapping="Wrap" />
+						<TextBlock Style="{StaticResource SubText}" Text="Conditional Events silently listen for any number of Triggers to be fired. After the required number of Triggers being monitored have been fired, it fires a Trigger of its own. Conditional Events cannot be assigned to a Token on a tile, nor can they be Triggered to activate - they are automatically always active and listening." VerticalAlignment="Center" TextWrapping="Wrap" />
 					</Border>
 
 					<Border Style="{StaticResource callout}" Margin="0,10">
 						<StackPanel>
 							<Grid Margin="0,0,0,5">
+								<Grid.RowDefinitions>
+									<RowDefinition Height="auto"/>
+									<RowDefinition Height="*"/>
+									<RowDefinition Height="auto"/>
+								</Grid.RowDefinitions>
 								<Grid.ColumnDefinitions>
 									<ColumnDefinition Width="auto"/>
 									<ColumnDefinition Width="*"/>
@@ -132,28 +137,45 @@
 										<Image Source="/JiME;component/Assets/add2.png"/>
 									</Button>
 								</StackPanel>
+
+								<ItemsControl Grid.Row="1" Grid.ColumnSpan="3" Padding="5" ItemsSource="{Binding interaction.triggerList}">
+									<ItemsControl.ItemsPanel>
+										<ItemsPanelTemplate>
+											<WrapPanel IsItemsHost="True" />
+										</ItemsPanelTemplate>
+									</ItemsControl.ItemsPanel>
+
+									<ItemsControl.ItemTemplate>
+										<DataTemplate>
+											<Border Style="{StaticResource callout}" Background="{StaticResource bgButtonColor}" Margin="0,0,5,5">
+												<StackPanel Orientation="Horizontal">
+													<TextBlock Text="{Binding}" Style="{StaticResource SubText}" Foreground="White" VerticalAlignment="Center"/>
+													<Button x:Name="removeTriggerButton" Click="removeTriggerButton_Click" Background="{StaticResource bgCancelDelete}" Foreground="White" Margin="10,0,0,0" Height="32" Width="32" DataContext="{Binding}">
+														<Image Source="/JiME;component/Assets/cancel.png"/>
+													</Button>
+												</StackPanel>
+											</Border>
+										</DataTemplate>
+									</ItemsControl.ItemTemplate>
+								</ItemsControl>
+
+								<StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
+									<TextBlock Text="Number of Triggers Required to Fire..." Style="{StaticResource Heading}"/>
+									<TextBlock Text="{Binding interaction.triggersRequiredCount}" Style="{StaticResource Heading}" Margin="10,0,0,0"/>
+								</StackPanel>
+								<StackPanel Grid.Row="2" Grid.Column="2" Orientation="Horizontal">
+									<TextBlock Text="One" Style="{StaticResource Heading}"/>
+									<Slider x:Name="triggersRequiredSlider" HorizontalAlignment="Left" Margin="10,7,10,0" VerticalAlignment="Top" Width="300"
+											Minimum="1" Maximum="{Binding interaction.triggerList.Count}"
+											SmallChange="1" LargeChange="1"
+											TickPlacement="Both" TickFrequency="1"
+											IsSnapToTickEnabled="True"
+											Value="{Binding interaction.triggersRequiredCount}"/>
+									<TextBlock Text="All" Style="{StaticResource Heading}"/>
+								</StackPanel>
 							</Grid>
 
-							<ItemsControl Padding="5" ItemsSource="{Binding interaction.triggerList}">
-								<ItemsControl.ItemsPanel>
-									<ItemsPanelTemplate>
-										<WrapPanel IsItemsHost="True" />
-									</ItemsPanelTemplate>
-								</ItemsControl.ItemsPanel>
 
-								<ItemsControl.ItemTemplate>
-									<DataTemplate>
-										<Border Style="{StaticResource callout}" Background="{StaticResource bgButtonColor}" Margin="0,0,5,5">
-											<StackPanel Orientation="Horizontal">
-												<TextBlock Text="{Binding}" Style="{StaticResource SubText}" Foreground="White" VerticalAlignment="Center"/>
-												<Button x:Name="removeTriggerButton" Click="removeTriggerButton_Click" Background="{StaticResource bgCancelDelete}" Foreground="White" Margin="10,0,0,0" Height="32" Width="32" DataContext="{Binding}">
-													<Image Source="/JiME;component/Assets/cancel.png"/>
-												</Button>
-											</StackPanel>
-										</Border>
-									</DataTemplate>
-								</ItemsControl.ItemTemplate>
-							</ItemsControl>
 						</StackPanel>
 					</Border>
 
