--- a/Views/TileEditorWindow.xaml
+++ b/Views/TileEditorWindow.xaml
@@ -64,6 +64,7 @@
 		</Style>
 		<CollectionViewSource x:Key="cvsTrigger" Source="{Binding scenario.triggersObserver}">
 			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="isEmpty" Direction="Descending"/>
 				<scm:SortDescription PropertyName="dataName"/>
 			</CollectionViewSource.SortDescriptions>
 		</CollectionViewSource>
