--- a/Views/TilePoolEditorWindow.xaml
+++ b/Views/TilePoolEditorWindow.xaml
@@ -13,6 +13,7 @@
 		<local:TileCollectionConverter x:Key="tileCollection"/>
 		<CollectionViewSource x:Key="cvsTrigger" Source="{Binding scenario.triggersObserver}">
 			<CollectionViewSource.SortDescriptions>
+				<scm:SortDescription PropertyName="isEmpty" Direction="Descending"/>
 				<scm:SortDescription PropertyName="dataName"/>
 			</CollectionViewSource.SortDescriptions>
 		</CollectionViewSource>
