--- a/Views/MonsterModifierEditorWindow.xaml
+++ b/Views/MonsterModifierEditorWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JiME"
         mc:Ignorable="d"
-        Title="Objective Editor" Style="{StaticResource DefaultWindow}" WindowStartupLocation="CenterScreen" Width="750" ContentRendered="Window_ContentRendered">
+        Title="Monster Bonus Editor" Style="{StaticResource DefaultWindow}" WindowStartupLocation="CenterScreen" Width="750" ContentRendered="Window_ContentRendered">
 
 	<Window.Resources>
 		<local:BoolInvertConverter x:Key="b2e"/>
@@ -23,12 +23,12 @@
 				<Border Style="{StaticResource callout}" Margin="0,10">
 				<UniformGrid Columns="2">
 					<StackPanel>
-						<TextBlock Style="{StaticResource Heading}" Text="Monster Modifier Name (in-game):"/>
+						<TextBlock Style="{StaticResource Heading}" Text="Monster Bonus Name (in-game):"/>
 						<TextBlock Style="{StaticResource SubText}">
 							Displayed in the Combat Panel in the game. <Bold><Italic>Required</Italic></Bold>
 						</TextBlock>
 						<TextBlock Style="{StaticResource SubText}"></TextBlock>
-						<TextBox x:Name="nameTB" Style="{StaticResource DefaultTextBox}" Margin="0,5" Width="250" HorizontalAlignment="Left" Text="{Binding name, UpdateSourceTrigger=PropertyChanged}"/>
+						<TextBox x:Name="nameTB" Style="{StaticResource DefaultTextBox}" Margin="0,5" Width="250" HorizontalAlignment="Left" Text="{Binding shortName, UpdateSourceTrigger=PropertyChanged}"/>
 					</StackPanel>
 
 					<StackPanel>
@@ -37,24 +37,44 @@
 							Only displayed in the editor. Use it to distinguish
 						</TextBlock>
 						<TextBlock Style="{StaticResource SubText}">
-							Modifiers that have the same in-game names.
+							Bonuses that have the same in-game names.
 						</TextBlock>
-						<TextBox x:Name="editorNameTB" Style="{StaticResource DefaultTextBox}" Margin="0,5" Width="250" HorizontalAlignment="Left" Text="{Binding name, UpdateSourceTrigger=PropertyChanged}"/>
+						<TextBox x:Name="dataNameTB" Style="{StaticResource DefaultTextBox}" Margin="0,5" Width="250" HorizontalAlignment="Left" Text="{Binding modifier.dataName}"/>
 					</StackPanel>
 				</UniformGrid>
 			</Border>
 
 			<GroupBox Header="Bonuses" FontSize="14" Padding="0" Style="{StaticResource DefaultGroupBox}" Margin="0,10,0,0">
-				<!--<UniformGrid Columns="2">-->
 				<StackPanel>
 					<Border Style="{StaticResource callout}" Margin="5">
 						<StackPanel>
-							<StackPanel Orientation="Horizontal">
-								<TextBlock Style="{StaticResource Heading}" Margin="0,0,10,5" Text="Lore/ XP / Threat Reduction Rewards:"/>
-								<TextBox Style="{StaticResource DefaultTextBox}" Width="25" Text="{Binding objective.loreReward}"/>
-								<TextBox Style="{StaticResource DefaultTextBox}" Width="25" Text="{Binding objective.xpReward}" Margin="10,0"/>
-								<TextBox Style="{StaticResource DefaultTextBox}" Width="25" Text="{Binding objective.threatReward}"/>
-							</StackPanel>
+							<UniformGrid Columns="5" Margin="0,0,0,15">
+
+								<StackPanel Orientation="Horizontal">
+									<TextBlock Style="{StaticResource Heading}" Margin="0,0,10,5" Text="Health"/>
+									<TextBox Style="{StaticResource DefaultTextBox}" Width="25" Text="{Binding modifier.health}"/>
+								</StackPanel>
+
+								<StackPanel Orientation="Horizontal">
+									<TextBlock Style="{StaticResource Heading}" Margin="0,0,10,5" Text="Armor"/>
+									<TextBox Style="{StaticResource DefaultTextBox}" Width="25" Text="{Binding modifier.armor}"/>
+								</StackPanel>
+
+								<StackPanel Orientation="Horizontal">
+									<TextBlock Style="{StaticResource Heading}" Margin="0,0,10,5" Text="Sorcery"/>
+									<TextBox Style="{StaticResource DefaultTextBox}" Width="25" Text="{Binding modifier.sorcery}"/>
+								</StackPanel>
+
+								<StackPanel Orientation="Horizontal">
+									<TextBlock Style="{StaticResource Heading}" Margin="0,0,10,5" Text="Damage"/>
+									<TextBox Style="{StaticResource DefaultTextBox}" Width="25" Text="{Binding modifier.damage}"/>
+								</StackPanel>
+
+								<StackPanel Orientation="Horizontal">
+									<TextBlock Style="{StaticResource Heading}" Margin="0,0,10,5" Text="Fear"/>
+									<TextBox Style="{StaticResource DefaultTextBox}" Width="25" Text="{Binding modifier.fear}"/>
+								</StackPanel>
+							</UniformGrid>
 
 							<UniformGrid Columns="2">
 								<StackPanel Orientation="Vertical">
