--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -207,48 +207,56 @@
 		</ToolBar>
 
 		<Border BorderBrush="Black" BorderThickness="0,0,1,0" Background="#FF46464A">
-			<Grid Width="190" >
-				<Grid.RowDefinitions>
-					<RowDefinition Height="auto"/>
-					<RowDefinition Height="*"/>
-					<RowDefinition Height="auto"/>
-					<RowDefinition Height="*"/>
-					<RowDefinition Height="auto"/>
-					<RowDefinition Height="*"/>
-					<RowDefinition Height="auto"/>
-					<RowDefinition Height="*"/>
-					<RowDefinition Height="auto"/>
-					<RowDefinition Height="*"/>
-				</Grid.RowDefinitions>
+			<ScrollViewer>
+				<Grid Width="190" >
+					<Grid.RowDefinitions>
+						<RowDefinition Height="auto"/>
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="auto"/>
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="auto"/>
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="auto"/>
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="auto"/>
+						<RowDefinition Height="*"/>
+						<RowDefinition Height="auto"/>
+						<RowDefinition Height="*"/>
+					</Grid.RowDefinitions>
 
-				<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="0">
-					<uc:SidebarListView x:Name="objectivesUC" Margin="5" Title="Objectives" ShowDuplicateButton="true" />
-				</Border>
+					<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="0">
+						<uc:SidebarListView x:Name="objectivesUC" Margin="5" Title="Objectives" ShowDuplicateButton="true" />
+					</Border>
 
-				<Border Grid.Row="2" BorderThickness="0,0,0,0" BorderBrush="Gray">
-					<uc:SidebarListView Margin="5" x:Name="interactionsUC" Title="Events" ShowDuplicateButton="true"/>
-				</Border>
+					<Border Grid.Row="2" BorderThickness="0,0,0,0" BorderBrush="Gray">
+						<uc:SidebarListView Margin="5" x:Name="interactionsUC" Title="Events" ShowDuplicateButton="true"/>
+					</Border>
 
-				<!--<GridSplitter HorizontalAlignment="Stretch" 
-                  Grid.Row="1" ResizeBehavior="PreviousAndNext" Height="10">
-					<GridSplitter.Background>
-						<ImageBrush Stretch="None" ImageSource="Assets/splitter-vertical.png"/>
-					</GridSplitter.Background>
-				</GridSplitter>-->
+					<!--<GridSplitter HorizontalAlignment="Stretch" 
+					  Grid.Row="1" ResizeBehavior="PreviousAndNext" Height="10">
+						<GridSplitter.Background>
+							<ImageBrush Stretch="None" ImageSource="Assets/splitter-vertical.png"/>
+						</GridSplitter.Background>
+					</GridSplitter>-->
 
-				<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="4">
-					<uc:SidebarListView x:Name="triggersUC" Margin="5" Title="Triggers" ShowDuplicateButton="true"/>
-				</Border>
+					<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="4">
+						<uc:SidebarListView x:Name="triggersUC" Margin="5" Title="Triggers" ShowDuplicateButton="true"/>
+					</Border>
 
 
-				<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="6">
-					<uc:SidebarListView x:Name="activationsUC" Margin="5" Title="Enemy Attack Groups" ShowDuplicateButton="true" />
-				</Border>
+					<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="6">
+						<uc:SidebarListView x:Name="activationsUC" Margin="5" Title="Enemy Attack Groups" ShowDuplicateButton="true" />
+					</Border>
 
-				<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="8">
-					<uc:SidebarListView x:Name="translationsUC" Margin="5" Title="Translations" ShowDuplicateButton="false" />
-				</Border>
-			</Grid>
+					<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="8">
+						<uc:SidebarListView x:Name="monsterModifiersUC" Margin="5" Title="Enemy Bonuses" ShowDuplicateButton="true" />
+					</Border>
+
+					<Border BorderThickness="0,0,0,0" BorderBrush="Gray" Grid.Row="10">
+						<uc:SidebarListView x:Name="translationsUC" Margin="5" Title="Translations" ShowDuplicateButton="false" />
+					</Border>
+				</Grid>
+			</ScrollViewer>
 		</Border>
 
 		<Border DockPanel.Dock="Bottom" BorderBrush="Black" BorderThickness="0,1,0,0" Height="30" Background="{StaticResource bgColorLight}">
